objects/Google_Shopping_Setup__mdt.object
<CustomObject>
    <label>Google Shopping Setup</label>
    <pluralLabel>Google Shopping Setup</pluralLabel>
    <fields>
        <fullName>Feed__c</fullName>
        <label>Feed</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SFCC</fullName>
                    <default>true</default>
                    <label>SFCC</label>
                </value>
                <value>
                    <fullName>Shopify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <label>Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Chain_Id__c</fullName>
        <label>Chain Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Col_Delimiter__c</fullName>
        <defaultValue>&quot;\t&quot;</defaultValue>
        <label>Col Delimiter</label>
        <length>14</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Delimiter__c</fullName>
        <defaultValue>&quot;\n&quot;</defaultValue>
        <label>Row Delimiter</label>
        <length>14</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Market__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Uses this market records as a reference to update the description and image URL on the products.</inlineHelpText>
        <label>Reference Market</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Named_Credential_Name__c</fullName>
        <label>Named Credential Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>